Updating to latest JDK/Soklet version