@@ -1,4 +1,4 @@
-FROM amazoncorretto:20
+FROM amazoncorretto:25
 EXPOSE 8080
 ENV RUNNING_IN_DOCKER=true
 
@@ -11,7 +11,11 @@ COPY soklet-2.0.0-SNAPSHOT.jar /app
 WORKDIR /app
 RUN javac -parameters -cp soklet-2.0.0-SNAPSHOT.jar -d build src/com/soklet/example/App.java
 
+# Build the app
+WORKDIR /app
+RUN javac -parameters -processor com.soklet.SokletProcessor -cp soklet-2.0.0-SNAPSHOT.jar -d build src/com/soklet/example/App.java
+
 # Unprivileged user for runtime
 USER 1000
 
-CMD ["/bin/sh", "-c", "java --enable-preview -cp soklet-2.0.0-SNAPSHOT.jar:build com/soklet/example/App"]
+CMD ["/bin/sh", "-c", "java -cp soklet-2.0.0-SNAPSHOT.jar:build com/soklet/example/App"]
